[package]
name = "ros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23" # creates a bootloader for us
volatile = "0.2.6" # prevents erronious removal of code by a strict compiler
spin = "0.5.2" # allows for synced static mutations. avoids errors.
x86_64 = "0.14.2" # kinda required for an x86_64 system 
uart_16550 = "0.2.0" # init the UART so we can talk over the serial port
pic8259 = "0.10.1" # primary interupt controller system
pc-keyboard = "0.5.0" # allows us to translate PC keyboard scan codes

[dependencies.lazy_static] # allows for statics not to be initialised at compile but instaid at run
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic # coment out when testing due to compiler error

# the profile used for `cargo build --release`
[profile.release]
#panic = "abort" # disable stack unwinding on panic # coment out when testing due to compiler error

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
] # some stdout stuff idk